--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    padding: 0;
+    margin-bottom: 0;
     list-style: none;
     text-decoration: none;
 }
@@ -10,10 +10,7 @@
     height: 100px;
     display: block;
     background-color: #101010;
-    
 }
-
-
 
 .inner_header{
     width: 1000px;
@@ -77,7 +74,8 @@
 
 
 body{
-    background: url("Images/Wallpaper.jpeg")
+    background: url("Images/Wallpaper.jpeg");
+    background-color: transparent;
 }
 
 .wrapper{
@@ -88,11 +86,15 @@ body{
     
 }
 
+
 .homeText p{
     color: white;
     width: 80%;
     height: 100%;
     padding-left: 3em;
+    background-color: #101010;
+    text-align: center;
+    padding-right: 2em;
     
 }
 
@@ -107,10 +109,8 @@ body{
 h3{
     text-align: center;
     padding-top: 1em;
-    
     font-size: 2.8em;
-
-    color: #ffffff;
+    color: #101010;
     padding-left: 1em;
 }
 
@@ -134,7 +134,7 @@ h3{
 }
 
 .Social li:hover{
-    background-color: #201f1f;
+    background-color: #101010;
     width: 110px;
     height: 100px;
     background-position: center;
