--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 	height: 100px;
 	display: block;
 	background-color: #101010;
+	opacity: 0.8;
 }
 
 .inner_header {
@@ -86,6 +87,7 @@ body {
 	height: 100%;
 	padding-left: 3em;
 	background-color: #101010;
+	opacity: .7;
 	text-align: center;
 	padding-right: 2em;
 }
@@ -96,6 +98,7 @@ body {
 	grid-gap: 1em;
 	border-radius: 10%;
 	padding-right: 3em;
+	opacity: 0.8;
 }
 
 h3 {
@@ -112,6 +115,7 @@ h3 {
 	height: 100%;
 	display: block;
 	background-color: #101010;
+	opacity: 0.95;
 }
 
 .Social li {
@@ -126,6 +130,7 @@ h3 {
 
 .Social li:hover {
 	background-color: #101010;
+
 	width: 110px;
 	height: 100px;
 	background-position: center;
