--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 	width: 100%;
 	height: 100px;
 	display: block;
-	background-color: #101010;
+	background-color: #000000;
 	opacity: 0.8;
 }
 
@@ -69,10 +69,22 @@
 	font-size: 16px;
 }
 
-body {
+a:hover {
+	background-color: rgb(42, 42, 42);
+	border-radius: 10px;
+	margin: 0 10px 0 10px;
+	transition: ease-in-out .4s;
+	cursor: pointer;
+}
+
+.top-wallpaper {
+	width: 100%;
+}
+
+/* body {
 	background: url("Images/Wallpaper.jpeg");
 	background-color: transparent;
-}
+} */
 
 .wrapper {
 	padding: 3em;
@@ -82,11 +94,10 @@ body {
 }
 
 .homeText p {
-	color: white;
+	color: black;
 	width: 80%;
 	height: 100%;
 	padding-left: 3em;
-	background-color: #101010;
 	opacity: .7;
 	text-align: center;
 	padding-right: 2em;
@@ -95,10 +106,15 @@ body {
 .bussinessPhotos {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-gap: 1em;
+	grid-gap: 8px;
 	border-radius: 10%;
-	padding-right: 3em;
+	margin-right: 3em;
 	opacity: 0.8;
+}
+
+.bussinessPhotos img:hover {
+	transform: scale(1.1);
+	transition: 0.4s;
 }
 
 h3 {
@@ -114,7 +130,7 @@ h3 {
 	width: 100%;
 	height: 100%;
 	display: block;
-	background-color: #101010;
+
 	opacity: 0.95;
 }
 
@@ -129,7 +145,7 @@ h3 {
 }
 
 .Social li:hover {
-	background-color: #101010;
+	background-color: #ebebeb;
 
 	width: 110px;
 	height: 100px;
