--- a/style.css
+++ b/style.css
@@ -34,19 +34,19 @@
 
 .header nav {
 	display: flex;
+	width: 100%;
 }
 
 .header nav a {
 	margin: 0 50px;
 	font-family: 'Raleway', sans-serif;
-	font-style: ;
 }
 
 .main-text {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-end;
-	margin: 0 450px;
+	width: 82%;
 	justify-content: space-between;
 }
 
@@ -64,69 +64,6 @@
 	font-style: italic;
 }
 
-/* .header {
-	width: 100%;
-	height: 100px;
-	display: block;
-	background-color: #000000;
-}
-
-.inner_header {
-	width: 1000px;
-	height: 100%;
-	display: block;
-	margin: 0 auto;
-}
-
-.logo_container {
-	height: 100%;
-	display: table;
-	float: left;
-}
-
-.logo_container h1 {
-	color: white;
-	height: 100%;
-	display: table-cell;
-	vertical-align: middle;
-	font-family: 'Montserrat', sans-serif;
-	font-size: 32px;
-	font-weight: 200;
-}
-
-.logo_container h1 span {
-	font-weight: 600;
-}
-
-.bussinessPhotos img {
-	border-radius: 10%;
-}
-
-.nav {
-	float: right;
-	height: 100%;
-}
-
-.nav a {
-	height: 100%;
-	display: table;
-	float: left;
-	padding: 0px 20px;
-}
-
-.nav a:last-child {
-	padding-right: 0;
-}
-
-.nav a li {
-	display: table-cell;
-	vertical-align: middle;
-	height: 100%;
-	color: white;
-	font-family: 'Montserrat', sans-serif;
-	font-size: 16px;
-} */
-
 a:hover {
 	background-color: rgb(42, 42, 42);
 	border-radius: 10px;
@@ -139,26 +76,21 @@ a:hover {
 	width: 100%;
 }
 
-/* body {
-	background: url("Images/Wallpaper.jpeg");
-	background-color: transparent;
-} */
-
 .wrapper {
 	padding: 3em;
 	text-align: center;
-	display: inline-flex;
+	display: flex;
 	align-items: stretch;
+	flex-direction: column;
 }
 
-.homeText p {
+.conatiner-1 {
+	background-image: url(Images/main2-LS.jpg);
+}
+
+.homeText-1 {
 	color: black;
 	width: 80%;
-	height: 100%;
-	padding-left: 3em;
-	opacity: .7;
-	text-align: center;
-	padding-right: 2em;
 }
 
 .bussinessPhotos {
