--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
 .header nav {
 	display: flex;
 	width: 100%;
+	align-items: center;
 }
 
 .header nav a {
@@ -76,13 +77,166 @@ a:hover {
 	width: 100%;
 }
 
+.middle {
+	background: linear-gradient(rgb(255, 255, 255), rgba(128, 128, 128, 0.397));
+	margin: 0;
+}
+
+.box1 {
+	display: flex;
+	justify-content: center;
+	padding: 40px;
+}
+
+.box1-text {
+	align-self: center;
+	margin: 0 100px;
+	font-size: 60px;
+	font-family: 'Montserrat', sans-serif;
+	width: 50%;
+}
+
+.box1-text p {
+	font-size: 15px;
+	font-family: 'Montserrat', sans-serif;
+	width: 85%;
+	margin: 20px 0;
+	letter-spacing: 3px;
+	line-height: 30px;
+}
+
+.box1-text button {
+	border: 3px solid black;
+	background: transparent;
+	font-size: 20px;
+	padding: 10px 20px;
+	position: relative;
+
+	cursor: pointer;
+}
+
+.box1-text button:hover {
+	padding: 20px 30px;
+	transition: ease-in-out 0.3s;
+	background: black;
+	color: white;
+}
+
+.box1-text hr {
+	opacity: 0.4;
+}
+
+.box1 img {
+	border-radius: 10px;
+	opacity: 0.9;
+	box-shadow: 0px 0px 15px 15px rgba(128, 128, 128, 0.534);
+}
+
+.middle-2 {
+	background: linear-gradient(rgba(128, 128, 128, 0.397), rgb(255, 255, 255));
+	padding: 80px 0;
+}
+
+.box2 {
+	display: flex;
+	justify-content: center;
+	padding: 40px;
+}
+
+.box2-text {
+	align-self: center;
+	margin: 0 100px;
+	font-size: 60px;
+	font-family: 'Montserrat', sans-serif;
+	width: 50%;
+}
+
+.box2-text p {
+	font-size: 20px;
+	font-family: 'Montserrat', sans-serif;
+	width: 85%;
+	margin: 30px 0;
+	letter-spacing: 3px;
+	line-height: 30px;
+}
+
+.box2-text button {
+	border: 3px solid black;
+	background: transparent;
+	font-size: 20px;
+	padding: 10px 20px;
+	position: relative;
+
+	cursor: pointer;
+}
+
+.box2-text button:hover {
+	padding: 20px 30px;
+	transition: ease-in-out 0.3s;
+	background: black;
+	color: white;
+}
+
+.box2-text hr {
+	opacity: 0.4;
+}
+
+.box2 img {
+	border-radius: 3px;
+	opacity: 0.9;
+	box-shadow: 0px 0px 15px 15px rgba(128, 128, 128, 0.534);
+}
+
 .wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.footer-wrapper {
+	bottom: 0;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	text-align: center;
+	width: 100%;
+	margin-top: 50px;
+	background: linear-gradient(rgb(255, 255, 255), rgba(128, 128, 128, 0.062));
+}
+
+.footer-wrapper a {
+	margin: 0 30px;
+	color: black;
+	text-decoration: none;
+	padding: 20px 20px;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 13.1px;
+}
+
+.footer-wrapper a:hover {
+	background: #adadad60;
+	transition: ease-in-out 0.3s;
+	border-radius: 5px;
+}
+
+.footer-wrapper a:visited {
+	color: black;
+}
+
+.copyRight {
+	color: black;
+	font-family: 'Orbitron', sans-serif;
+	font-size: 0.8em;
+	letter-spacing: 2px;
+}
+
+/* .wrapper {
 	padding: 3em;
 	text-align: center;
 	display: flex;
 	align-items: stretch;
 	flex-direction: column;
-}
+} */
 
 .conatiner-1 {
 	background-image: url(Images/main2-LS.jpg);
